# pay-respects

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.md  development.md  flake.nix  flowchart.mmd  init.fish  install-win.ps1  install.ps1  install.sh  modules.md  pay-respects.plugin.zsh  pay-respects.zsh  roadmap.md  rules  rules.md  structure.mmd
.github/: FUNDING.yml  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml  rule-request.yaml
.github/workflows/: build-nightly.yaml  build.yaml  check-nightly.yaml  pr-mirror.yaml  rust.yml  test.yml
.woodpecker/: check-nightly.yaml
core/: Cargo.toml  build.rs  rules
core/i18n/: i18n.toml
core/rules/: cargo.toml  cd.toml  rm.toml
core/src/: args.rs  config.rs  data.rs  highlighting.rs  init.rs  integrations.rs  main.rs  modes.rs  rules.rs  rules_function.rs  shell.rs  style.rs  suggestions.rs  system.rs
core/templates/: eval.bash  eval.fish  eval.nu  eval.ps1  eval.sh  eval.zsh  init.bash  init.fish  init.nu  init.ps1  init.zsh
i18n/: i18n.toml
man/: pay-respects-modules.5  pay-respects-rules.5  pay-respects.1  pay-respects.5
man-src/: pay-respects-modules.5.md  pay-respects-rules.5.md  pay-respects.1.md  pay-respects.5.md
module-request-ai/: Cargo.toml  README.md
module-request-ai/i18n/: i18n.toml
module-request-ai/src/: buffer.rs  main.rs  requests.rs
module-request-ai/templates/: prompt.txt  request.txt
module-runtime-rules/: Cargo.toml  README.md
module-runtime-rules/src/: config.rs  main.rs  replaces.rs  rules.rs
parser/: Cargo.toml
parser/src/: lib.rs  replaces.rs
pay-respects/: Cargo.toml
pay-respects-fallback-request-ai/: Cargo.toml
pay-respects-fallback-request-ai/i18n/: i18n.toml
pay-respects-fallback-request-ai/src/: main.rs
pay-respects-module-runtime-rules/: Cargo.toml
pay-respects-module-runtime-rules/src/: main.rs  replaces.rs  rules.rs
pay-respects-parser/src/: lib.rs  replaces.rs
pay-respects-utils/src/: evals.rs  files.rs
pay-respects/rules/: cat.toml  yarn.toml
pay-respects/src/: args.rs  files.rs  main.rs  modes.rs  replaces.rs  requests.rs  rules.rs  runtime_rules.rs  shell.rs  style.rs  suggestions.rs  system.rs
rule_parser/: Cargo.toml
rule_parser/src/: lib.rs  replaces.rs
rules/: _PR_FALLBACK.toml  _PR_GENERAL.toml  _PR_PRIVILEGE.toml  _PR_PRIVILEGE_A.toml  brew.toml  c_typo.toml  cargo.toml  cat.toml  cd.toml  cp.toml  eza.toml  general.toml  git.toml  jj.toml  ls.toml  make.toml  mkdir.toml  mv.toml  no_command.toml  npm.toml  pacman.toml  pr_general.toml  pr_privilege.toml  privilege.toml  rm.toml  size.toml  sl.toml  snap.toml  sudo-doas.toml  sudo.toml  touch.toml  vim.toml  yarn.toml
select/: Cargo.toml
select/src/: lib.rs
src/: args.rs  corrections.rs  files.rs  main.rs  modes.rs  replaces.rs  requests.rs  rules.rs  runtime_rules.rs  shell.rs  style.rs  suggestions.rs  system.rs
tests/: benchmark.sh  main.sh  test.sh
tests/cases/: 001  002  003  011  012  013  021  101  102  desperate_fuzze_recovery  desperate_lookup  file_path  file_path.sh  privilege  privilege.sh  regex_cmd  regex_cmd.sh  regex_err  regex_opt  regex_opt.sh  typo  typo.sh  vim_unblocked
utils/: Cargo.toml
utils/src/: evals.rs  files.rs  lib.rs  lists.rs  log.rs  macros.rs  modes.rs  settings.rs  shell.rs  strings.rs
