[package]
name = "pay-respects"
version = "0.5.7"
edition = "2021"

# for crates.io
description = "Terminal command correction, alternative to thefuck written in Rust with AI support"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
keywords = ["cli", "terminal", "utility", "shell"]
categories = ["command-line-utilities"]
license = "AGPL-3.0"
include = [
	"**/*.rs",
	"**/*.toml",
]

[dependencies]
colored = "2.0"
sys-locale = "0.3.2"
rust-i18n = "3"
regex-lite = "0.1"

toml = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

pay-respects-parser = "0.2.5"
# pay-respects-parser = { path = "../pay-respects-parser" }


[features]
runtime-rules = ["dep:serde", "dep:toml"]
request-ai = ["dep:serde", "dep:serde_json", "dep:reqwest"]

[profile.release]
strip = true
codegen-units = 1
lto = true
