[package]
name = "pay-respects"
authors = ["iff <iff@ik.me>"]
version = "0.6.8"
edition = "2021"

# for crates.io
description = "Command suggestions, command-not-found and thefuck replacement written in Rust"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
keywords = ["cli", "terminal", "utility", "shell"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-or-later"
include = ["**/*.rs", "**/*.toml"]

[dependencies]
colored = "2"
sys-locale = "0.3"
rust-i18n = "3"
regex-lite = "0.1"

inquire = "0.7.5"

# pay-respects-parser = "0.3.3"
# pay-respects-utils = "0.1.2"
pay-respects-parser = { version = "0.3.4", path = "../parser" }
pay-respects-utils = { version ="0.1.3", path = "../utils"}

[package.metadata.deb]
assets = [
	["target/release/pay-respects", "usr/bin/", "755"],
	["target/release/_pay-respects-module-100-runtime-rules", "usr/bin/", "755"],
	["target/release/_pay-respects-fallback-100-request-ai", "usr/bin/", "755"],
]
priority = "optional"
section = "utils"

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/pay-respects", dest = "/usr/bin/", mode = "755"},
	{ source = "target/release/_pay-respects-module-100-runtime-rules", dest = "/usr/bin/", mode = "755"},
	{ source = "target/release/_pay-respects-fallback-100-request-ai", dest = "/usr/bin/", mode = "755"},
]
