[package]
name = "pay-respects"
authors = ["iff <iff@ik.me>"]
version = "0.8.7"
edition = "2024"

# for crates.io
description = "Command suggestions, command-not-found and thefuck replacement written in Rust"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
keywords = ["cli", "terminal", "utility", "shell"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-or-later"
include = ["**/*.rs", "**/*.toml", "templates/**/*"]

[dependencies]
colored = "3"
sys-locale = "0.3"
rust-i18n = "4"
regex-lite = "0.1"
askama = "0.15"
itertools = "0.14.0"

# config file
toml = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

pay-respects-parser = { version = "0.3", path = "../parser" }
pay-respects-utils = { version ="0.1", path = "../utils"}
pay-respects-select = { version ="0.1", path = "../select"}
tempfile = "3.27.0"

[package.metadata.deb]
assets = [
	["target/release/pay-respects", "usr/bin/", "755"],
	["target/release/_pay-respects-module-100-runtime-rules", "usr/bin/", "755"],
	["target/release/_pay-respects-fallback-100-request-ai", "usr/bin/", "755"],
	["man/pay-respects.1", "usr/share/man/man1/", "644"],
	["man/pay-respects-rules.5", "usr/share/man/man5/", "644"],
	["man/pay-respects-modules.5", "usr/share/man/man5/", "644"],
	["LICENSE", "usr/share/doc/pay-respects/", "644"],
]
priority = "optional"
section = "utils"

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/pay-respects", dest = "/usr/bin/", mode = "755"},
	{ source = "target/release/_pay-respects-module-100-runtime-rules", dest = "/usr/bin/", mode = "755"},
	{ source = "target/release/_pay-respects-fallback-100-request-ai", dest = "/usr/bin/", mode = "755"},
	{ source = "man/pay-respects.1", dest = "/usr/share/man/man1/", mode = "644"},
	{ source = "man/pay-respects-rules.5", dest = "/usr/share/man/man5/", mode = "644"},
	{ source = "man/pay-respects-modules.5", dest = "/usr/share/man/man5/", mode = "644"},
	{ source = "LICENSE", dest = "/usr/share/doc/pay-respects/", mode = "644"},
]
