[package]
name = "pay-respects-module-request-ai"
version = "0.1.6"
edition = "2021"

description = "AI request module for the pay-respects CLI tool"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
license = "AGPL-3.0-or-later"
include = ["**/*.rs"]

[dependencies]
colored = "2"
sys-locale = "0.3"
rust-i18n = "3"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"]}
textwrap = "0.16"
terminal_size = "0.4"


curl = { version = "0.4", optional = true }

[features]
default = ["libcurl"]
# linking to libcurl dynamically requires openssl when compiling and
# complicates cross compilation
libcurl = ["dep:curl"]

[[bin]]
name = "_pay-respects-fallback-100-request-ai"
path = "src/main.rs"
