[package]
name = "pay-respects-module-runtime-rules"
version = "0.1.10"
edition = "2021"

# for crates.io
description = "Runtime rules module for the pay-respects CLI tool"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
license = "AGPL-3.0-or-later"
include = ["**/*.rs"]


[dependencies]
regex-lite = "0.1"

toml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
pay-respects-utils = { version = "0.1", path = "../utils" }

[[bin]]
name = "_pay-respects-module-100-runtime-rules"
path = "src/main.rs"
