[package]
name = "pay-respects-parser"
version = "0.3.3"
edition = "2021"

# for crates.io
description = "Compile time rule parser for the pay-respects CLI tool"
repository = "https://github.com/iffse/pay-respects"
license = "AGPL-3.0-or-later"
include = [
	"**/*.rs",
	"**/*.toml",
]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
