[package]
name = "pay-respects-parser"
version = "0.3.16"
edition = "2024"

# for crates.io
description = "Compile time rule parser for the pay-respects CLI tool"
repository = "https://github.com/iffse/pay-respects"
license = "MPL-2.0"
include = [
	"**/*.rs",
	"**/*.toml",
]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
pay-respects-utils = { version ="0.1", path = "../utils"}
