[package]
name = "pay-respects-utils"
version = "0.1.7"
edition = "2021"

# for crates.io
description = "Utilities for the pay-respects CLI tool"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
license = "MPL-2.0"
include = ["**/*.rs"]

[dependencies]
regex-lite = "0.1"
itertools = "0.14"
