[package]
name = "pay-respects-utils"
version = "0.1.17"
edition = "2024"

# for crates.io
description = "Utilities for the pay-respects CLI tool"
homepage = "https://codeberg.org/iff/pay-respects"
repository = "https://github.com/iffse/pay-respects"
license = "MPL-2.0"
include = ["**/*.rs"]

[dependencies]
regex-lite = "0.1"
itertools = "0.14"
colored = "3.1.1"

# config file
toml = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
